[tool.poetry]
name = "marchov"
version = "0.1.0"
description = ""
authors = ["Simon Junod <sj@simonjunod.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pydle = {extras = ["sasl"], version = "^1.0.0"}
markovify = "^0.9.4"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
